# codility

./: CMakeLists.txt  README  README.md  ex1_longest_password.cpp  ex5_parity_degree.cpp  ex5_parking_bill.cpp  ex5_three_letters.cpp
